# portfolio

./: .gitignore  Cargo.toml  README.md  REQ-007-IMPLEMENTATION-PLAN.md  Trunk.toml  docker-compose.prod.yml  docker-compose.yml  index.html  rocket.toml  watch.toml
.env/: .env.dev  .env.prod
.github/workflows/: ci-deploy.yml  tdd-board-sync.yml
backend/: Cargo.toml  Dockerfile.dev  Dockerfile.prod
backend/src/: main.rs  routes.rs
backend/static/axiom/: index.html
cargo-verify/: Cargo.toml  README.md
cargo-verify/examples/: verified_module.rs
cargo-verify/src/: collect.rs  engine.rs  extract.rs  main.rs  parse.rs  report.rs
doc/: ascent-knowledge-base.md  ascent-usage-example.md  layout.md
frontend/: Cargo.toml  Trunk.toml  index.html  package-lock.json  styles.css  tailwind.config.js
frontend/design/: colors.json
frontend/src/: main.rs  theme.rs
frontend/src/components/: about.rs  audience.rs  background.rs  contact.rs  footer.rs  header.rs  hero.rs  loading.rs  mod.rs  portfolio.rs  process.rs  scroll_helper.rs  scroll_helper_demo.rs  scroll_snap.rs  scroll_video.rs  services.rs  sprite_animation.rs  ui_depth.rs
frontend/src/components/common/: animated_div.rs  card.rs  cta_button.rs  form_field.rs  mod.rs
kb/facts/: issues.dl
kb/rules/: tdd.dl
scripts/: validate.sh
src/: main.rs
src/art/: mod.rs
src/components/: hero.rs  mod.rs  nav.rs  portfolio.rs
src/db/: mod.rs
src/kb/: mod.rs
src/www/: mod.rs
static/css/: styles.css
templates/: index.html
