[package]
name = "portfolio"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = "0.5.0-rc.1"
rocket_contrib = "0.4.0-rc.2"
reqwest = "0.11.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tera = "1.0"
anyhow = "1.0"
tokio = "1.38.0"
wasm-bindgen = "0.2.92"
surreal = "0.4.1"



[dev-dependencies]
cargo-watch = "7.8.0"
