[package]
name = "cargo-verify"
version = "0.1.0"
edition = "2021"
description = "Datalog-gated promotion system for Rust - verify declared vs actual test/coverage/compliance"
license = "MIT OR Apache-2.0"

[[bin]]
name = "cargo-verify"
path = "src/main.rs"

[dependencies]
# Core
ascent = "0.8"
syn = { version = "2.0", features = ["full", "parsing", "visit"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Cargo integration
cargo_metadata = "0.18"

# Async for running cargo commands
tokio = { version = "1.43", features = ["full", "process"] }

# Parsing
regex = "1.11"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Pretty output
colored = "2.1"

[dev-dependencies]
tempfile = "3.14"
