[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "=0.2.95"
wasm-bindgen-futures = "0.4"

# JSON deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async utilities
futures = "0.3"

# JavaScript interop
js-sys = "0.3"

# For web_sys window access
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlElement", "CssStyleDeclaration", "Event", "EventTarget", "HtmlImageElement"] }
